# tech-table-log

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
src/podcast_agents/: __init__.py  __main__.py  agent.py  config.py
src/podcast_agents/prompts/: about_podcast.md  master.md  modify.md  planner.md  review.md  show_notes.md  transcribe.md
src/podcast_agents/tools/: transcribe.py
src/podcast_agents/utils/: logger.py
